--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,10 @@
     <color name="colorPrimaryDark">@color/gray</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="gray400">#BDBDBD</color>
+    <color name="gray800">#424242</color>
     <color name="gray">#2A2A2A</color>
+    <color name="transparent">#00000000</color>
+    <color name="gray900">#212121</color>
+
 </resources>
