--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,16 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">@color/gray</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="white">#FFFFFF</color>
 
     <color name="gray400">#BDBDBD</color>
     <color name="gray800">#424242</color>
     <color name="gray">#2A2A2A</color>
-    <color name="transparent">#00000000</color>
-    <color name="gray900">#212121</color>
 
+    <color name="transparent">#00000000</color>
+    <color name="black50">#81000000</color>
+
+    <color name="gray900">#212121</color>
+    <color name="greenA400">#9CDD05</color>
+    <color name="red700">#F05228</color>
 </resources>
