--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -8,16 +8,11 @@
     android:orientation="vertical"
     tools:context="obni.browser.activity.BrowserActivity">
 
-    <android.support.v4.widget.NestedScrollView
+    <obni.browser.widget.NestedWebView
+        android:id="@+id/webView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <WebView
-            android:id="@+id/webView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </android.support.v4.widget.NestedScrollView>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -26,24 +21,31 @@
 
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/gray"
             android:contentInsetLeft="0dp"
             android:contentInsetStart="0dp"
-            android:background="@color/gray"
             app:contentInsetLeft="0dp"
             app:contentInsetStart="0dp"
             app:layout_scrollFlags="scroll|enterAlways|snap"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:layout_height="wrap_content">
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
             <obni.browser.widget.SearchBar
                 android:id="@+id/searchBar"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/size56"
                 android:transitionName="searchBar" />
-
-
         </android.support.v7.widget.Toolbar>
-
-
     </android.support.design.widget.AppBarLayout>
+
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_gravity="bottom"
+        android:max="100"
+        android:progressTint="@color/black50" />
+
 </android.support.design.widget.CoordinatorLayout>
